# 21-PersonnelApi_Logs_Documents/src/routes/auth.router.js
@@ -12,7 +12,7 @@ const auth = require('../controllers/auth.controller')
 // URL: /auth
 
 router.post('/login', auth.login)
-router.all('/logout', auth.logout)
+router.get('/logout', auth.logout)  // swaggerAutogen all methodunu yakalamaz
 
 /* ------------------------------------------------------- */
 module.exports = router
